@@ -127,13 +127,14 @@ namespace System.Web.UI.WebControls {
 		string ResolveAdUrl (string url)
 		{
 			string path = url;
-			
-			if (AdvertisementFile != null && AdvertisementFile.Length > 0 && path [0] != '/' && path [0] != '~' 
-#if NET_2_0
-				&& !Uri.IsWellFormedUriString (path, UriKind.Absolute)
-#endif
-				)
-				return UrlUtils.Combine (UrlUtils.GetDirectory (ResolveUrl (AdvertisementFile)), path);
+
+			if (AdvertisementFile != null && AdvertisementFile.Length > 0 && path [0] != '/' && path [0] != '~')
+				try {
+					new Uri (path);
+				}
+				catch {
+					return UrlUtils.Combine (UrlUtils.GetDirectory (ResolveUrl (AdvertisementFile)), path);
+				}
 			
 			return ResolveUrl (path);
 		}
